# zkp-temp

./: CMakeLists.txt  README.md  main.cpp
arithmetic/: multilinear_polynomial.h  util.cpp  util.h  virtual_polynomial.cpp  virtual_polynomial.h
field_and_polynomial/: temp.h
subroutines/pcs/: multilinear_KZG.h  srs.h
subroutines/poly_iop/: structs.h
subroutines/poly_iop/perm_check/: perm_check_util.h  permcheck.h
subroutines/poly_iop/prod_check/: prodcheck.h
subroutines/poly_iop/sum_check/: prover.h  sumcheck.h  verifier.h
subroutines/poly_iop/zero_check/: zerocheck.h
transcript/: transcript.h
